# HydraDragonAntivirusSearchEngine

./: .gitignore  BulkReport.csv  MLWeb.py  README.md  WhitelistReport.csv  antivirus.py  antivirusconsole.py  antivirusconsoledontuse.py  antivirusipmodel.py  index.html  log.txt  post_script.py  requirements.txt  scanner.py  setup.py  splitfile.py
.github/workflows/: scan.yml
DotNet/Project Malware Finder/: Project Malware Finder.sln
DotNet/Project Malware Finder/Project Malware Finder/: Form1.Designer.cs  Form1.cs  (+3 more)
Hydra Dragon Antivirus Search Engine/: Hydra Dragon Antivirus Search Engine.sln
Hydra Dragon Antivirus Search Engine/Hydra Dragon Antivirus Search Engine/: App.xaml  App.xaml.cs  Hydra Dragon Antivirus Search Engine.csproj  MainWindow.xaml  MainWindow.xaml.cs
Project Malware Finder/: Project Malware Finder.sln
Project Malware Finder/Project Malware Finder/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  Project Malware Finder.csproj
css/: style.css
deperated/: oldantivirusnogui.py
docs/: index.html
examples/: README.md  myexamplepersonalsetting.json  myexamplepersonalsettings.json
hydradragonantivirussearchengine/: Cargo.toml
hydradragonantivirussearchengine/src/: main.rs
settings/: settings.json
website/: IPv4DDoS.txt  README.txt  mypersonalsettings.json  phishingormalwareipv4.py
website/cleaned/: invalid_ips.txt
website/reports/: AbuseIPDB_Report.csv  BulkReport_duplicate.csv  PotentiallyDownBulk_duplicate.csv  PotentiallyDownWhitelist_duplicate.csv  PotentiallyUpBulk_duplicate.csv  WhitelistReport.csv  WinErrorBulk.csv
(+4 files in other folders)
