[package]
name = "hydradragonantivirussearchengine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
md-5 = "0.10.6"
anyhow = "1.0.95"
futures = "0.3.31"
scraper = "0.22.0"
urlencoding = "2.1.3"
chrono = "0.4.39"